[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/menu_main.gd" type="Script" id=1]

[node name="menu_game" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="gui" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -512.0
offset_top = -288.0
offset_right = 512.0
offset_bottom = 288.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="root" type="VBoxContainer" parent="gui"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -266.0
offset_top = 58.0
offset_right = 269.0
offset_bottom = 288.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level_01" type="Button" parent="gui/root"]
offset_right = 535.0
offset_bottom = 20.0
text = "Level 1"

[node name="level_02" type="Button" parent="gui/root"]
offset_top = 24.0
offset_right = 535.0
offset_bottom = 44.0
text = "Level 2"

[node name="level_test" type="Button" parent="gui/root"]
offset_top = 48.0
offset_right = 535.0
offset_bottom = 68.0
text = "Level Test"

[node name="editor" type="Button" parent="gui/root"]
offset_top = 72.0
offset_right = 535.0
offset_bottom = 92.0
text = "Editor"

[node name="exit" type="Button" parent="gui/root"]
offset_top = 96.0
offset_right = 535.0
offset_bottom = 116.0
text = "Exit"

[node name="Label" type="Label" parent="gui"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_right = 160.0
offset_bottom = 58.0
text = "Sticky Ninja"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="debug" type="Label" parent="."]
offset_right = 512.0
offset_bottom = 288.0
text = "..."
__meta__ = {
"_edit_use_anchors_": false
}
